fixed lateral scrollbar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -63,3 +63,7 @@
   background-color: rgb(221, 221, 221);
   border: 3px solid#121212;
 }
+
+body {
+  overflow: scroll; /* Show scrollbars */
+}
